// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -10000 token0 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -10000 token1 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16919,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16912,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 10000 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16919,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16912,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 1649,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 111,
    "range_check_builtin_applications": 27246,
    "steps": 503544,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 83,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 54,
    "range_check_builtin_applications": 2641,
    "steps": 47485,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": -1386296n,
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 299,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 111,
    "range_check_builtin_applications": 8556,
    "steps": 180622,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16919,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16912,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 1649,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 111,
    "range_check_builtin_applications": 27186,
    "steps": 503370,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 83,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 54,
    "range_check_builtin_applications": 2640,
    "steps": 47488,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": -1386296n,
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 299,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 111,
    "range_check_builtin_applications": 8546,
    "steps": 180598,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 1649,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 111,
    "range_check_builtin_applications": 27186,
    "steps": 503370,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 1621,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 98,
    "range_check_builtin_applications": 27792,
    "steps": 490550,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 41,
    "range_check_builtin_applications": 1596,
    "steps": 34594,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": 1386295n,
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 271,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 98,
    "range_check_builtin_applications": 8122,
    "steps": 163854,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16919,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16912,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 1621,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 98,
    "range_check_builtin_applications": 27733,
    "steps": 490367,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 41,
    "range_check_builtin_applications": 1596,
    "steps": 34588,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": 1386295n,
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 271,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 98,
    "range_check_builtin_applications": 8113,
    "steps": 163821,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 1621,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 98,
    "range_check_builtin_applications": 27733,
    "steps": 490367,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap -10000 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap -10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16919,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16912,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 10000 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16919,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16912,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 0 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 0 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap -10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap -10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 0 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 0 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap -10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap -10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 0 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 0 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16919,
  },
  "liquidity_after": 230021n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16912,
  },
  "liquidity_after": 230021n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;

exports[`core > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "INSUFFICIENT_TF_BALANCE",
}
`;
